# flask_shorten

./: .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  Dockerfile  Pipfile  README.md  alembic.ini  azure-pipelines.yml  docker-compose.yaml  mypy.ini  pyproject.toml  run.py
alembic/: env.py
alembic/versions/: b3e9d4be4d7c_added_url_mapper_table.py
flask_shorten/: __init__.py  models.py  views.py
flask_shorten/static/: homepage.html
flask_shortener/: __init__.py  models.py  views.py
test/: test_flask_shorten.py
