[tool.poetry]
name = "flask_shorten"
version = "0.1.0"
description = "An example flask app that handles url shortening"
authors = ["Jt Miclat <jtmiclat@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.0"
flask-sqlalchemy = "^2.3"
psycopg2 = "^2.7"
alembic = "^1.0"
flask-rest-api = "^0.14.0"
shortuuid = "^0.5.0"
gunicorn = "^19.9"

[tool.poetry.dev-dependencies]
pytest = "^4.3"
ipython = "^7.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
